// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "completed": false,
  "distance": 94373.82458252949,
  "path": Array [
    StartEvent {
      "point": Array [
        6.917970423726742,
        51.12764467984819,
      ],
      "time": 1500300414931.921,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": Array [
        6.281255521419947,
        50.98907556181277,
      ],
      "time": 1500306179779.143,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": Array [
        6.1937558822878,
        51.17227647084881,
      ],
      "time": 1500308464911.7656,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "completed": true,
  "distance": 136420.85415876907,
  "path": Array [
    StartEvent {
      "point": Array [
        6.931349782770248,
        51.08473062172237,
      ],
      "time": 1500303056825.0186,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": Array [
        6.282918718345648,
        50.99645952012375,
      ],
      "time": 1500305066358.2283,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": Array [
        6.194183950118521,
        51.17234406494242,
      ],
      "time": 1500306711548.8188,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": Array [
        6.607500097039639,
        50.969491521107216,
      ],
      "time": 1500308404130.9412,
      "type": "turn",
    },
    FinishEvent {
      "point": Array [
        7.008423480016633,
        51.09851259802531,
      ],
      "time": 1500309550837.2544,
      "type": "finish",
    },
  ],
  "speed": 75.6258314792126,
  "time": 6494.012235839844,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 1`] = `
Object {
  "completed": false,
  "distance": 52735.15992428783,
  "path": Array [
    StartEvent {
      "point": Array [
        6.914785463652349,
        51.13786038310546,
      ],
      "time": 1500301028833.1543,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": Array [
        6.282918718345648,
        50.99645952012375,
      ],
      "time": 1500305066358.2283,
      "type": "turn",
    },
  ],
  "speed": undefined,
  "time": undefined,
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns an intermediate result 2`] = `
Object {
  "completed": true,
  "distance": 136420.85415876907,
  "path": Array [
    StartEvent {
      "point": Array [
        6.931349782770248,
        51.08473062172237,
      ],
      "time": 1500303056825.0186,
      "type": "start",
    },
    TurnEvent {
      "num": 1,
      "point": Array [
        6.282918718345648,
        50.99645952012375,
      ],
      "time": 1500305066358.2283,
      "type": "turn",
    },
    TurnEvent {
      "num": 2,
      "point": Array [
        6.194183950118521,
        51.17234406494242,
      ],
      "time": 1500306711548.8188,
      "type": "turn",
    },
    TurnEvent {
      "num": 3,
      "point": Array [
        6.607500097039639,
        50.969491521107216,
      ],
      "time": 1500308404130.9412,
      "type": "turn",
    },
    FinishEvent {
      "point": Array [
        7.008423480016633,
        51.09851259802531,
      ],
      "time": 1500309550837.2544,
      "type": "finish",
    },
  ],
  "speed": 75.6258314792126,
  "time": 6494.012235839844,
}
`;
